--- a/src/components/photoView/index.module.scss
+++ b/src/components/photoView/index.module.scss
@@ -7,6 +7,11 @@
 	background: rgba(0,0,0,.7) ;
 	z-index: 1000;
 	img{
+		position: absolute;
+		left:0;
+		right:0;
+		top:0;
+		bottom:0;
 		width:100%;
 		height:100%;
 		object-fit: contain;
