--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ body {
 		font-size:16px;
 		color:#000000;
 		margin-bottom:10px;	
+		font-family: PingFang-SC-Medium;
 }
 .detailInfo div label{
 	color:#A5A7A9;
