--- a/src/templates/temp1/index.module.scss
+++ b/src/templates/temp1/index.module.scss
@@ -90,7 +90,7 @@
 	overflow: auto;
 	white-space: nowrap;
 	margin-top:15px;
-	padding-bottom: 90px;
+	padding:0 20px 90px;
 	div{
 		display: inline-block;
 		margin-right:7px;
