--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,8 @@ body {
 .detailInfo div.block{
 	width:100%;
 	display: flex;
+	overflow:auto;
+	white-space: pre-wrap;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
