--- a/src/templates/temp1/index.module.scss
+++ b/src/templates/temp1/index.module.scss
@@ -12,13 +12,45 @@
 	}
 }
 
+.sliderContainer{
+	position: fixed !important;
+	left:0;
+	right:0;
+	top:0;
+	height:250px;
+	.img{
+		height:250px;
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+	
+}
+.page{
+	position: absolute;
+	right:20px;
+	bottom:10px;
+	width:40px;
+	height:20px;
+	line-height: 20px;
+	background:rgba(255,255,255,0.4);
+	text-align: center;
+	border-radius:16px;
+	font-size:12px;
+	color:#efefef;
+	font-family:PingFang-SC-Medium;
+	font-weight:500;
+	z-index: 2;
+}
+
+
 .baseInfo{
 	position: relative;
 	z-index: 1;
-	margin-top:230px;
+	margin-top:250px;
 	background: #fff;
 	padding:20px;
-	border-radius: 20px 20px 0 0 ;
+	//border-radius: 20px 20px 0 0 ;
 	.title{
 		color:#484D4F;
 		font-size:18px;
@@ -106,8 +138,8 @@
 	}
 }
 .location{
-	padding:0 20px;
-	margin-bottom: 30px;
+	padding:0 20px 30px;
+	background: #fff;
 	p{
 		padding:10px 0px;
 		border:1px solid #efefef;
