--- a/src/components/swiper/index.module.scss
+++ b/src/components/swiper/index.module.scss
@@ -16,7 +16,7 @@
 	position: absolute;
 	right:20px;
 	bottom:10px;
-	width:40px;
+	padding:0 10px;
 	height:20px;
 	line-height: 20px;
 	background:rgba(255,255,255,0.4);
